    instead of assigning the find result to @value-field
- Service Facade
  - Removed Dzhuvinov JSON-RPC jars (implemented internally now)
  - Improved and fixed JSON-RPC remote service client and auto server
  - Changed service.@validate=false to still apply defaults and type
    conversions for defined in-parameters, but not exclude undefined params
    or error on other validation errors
- Transaction Facade
  - Added transaction-facade.@use-transaction-cache attribute, defaults to
    true, set to false to disable the TransactionCache globally
  - Added new transaction-facade sub-elements transaction-jndi and
    transaction-internal instead of single transaction-factory;
    transaction-internal has a class attribute to specify an implementation
    of the TransactionInternal interface to init/destroy the JTA impl
  - TransactionFacade now has active Synchronization registry like the
    active XAResource registry per transaction that existed before
  - Moved XAResource tools to Synchronization: TransactionCache, OrientDB
    tx handler, ServiceCallSpecial.registerOnCommit() and
    registerOnRollback(), Service ECA rule tx-commit and tx-rollback,
    EntityDataFeed

Bug Fixes:

- Due to some quirks in Shiro ehcache support it is disabled by default; it
  is still supported for use in distributed environments with shared auth
  cache (see shiro.ini for details)
- Fixed issue with entity-condition in a view-entity when the econdition
  value matched a localized string different from the original value
- Fixed issue with form-single and form-list.@transition when it matches
  a localized string (especially on MySQL or other DBs with case
  insensitive string matching), now only expands transition value if it
  contains a "${"
- Fixed not-like entity condition operator which was treated as like
- Fixed bug in EntityFind.searchFormInputs using ec.web.parameters instead
  of context; parameters are added to the context and other things may be