@@ -423,10 +423,17 @@ class ServiceDefinition {
 
     protected Object checkConvertType(Node parameterNode, String namePrefix, String parameterName, Object parameterValue,
                                       Map<String, Object> rootParameters, ExecutionContextImpl eci) {
+        // set the default if applicable
+        if (!parameterValue && !(parameterValue instanceof Boolean) && parameterNode."@default") {
+            ((ContextStack) eci.context).push(rootParameters)
+            parameterValue = eci.getResource().evaluateContextField((String) parameterNode."@default", "${this.location}_${parameterName}_default")
+            // logger.warn("For parameter ${namePrefix}${parameterName} new value ${parameterValue} from default [${parameterNode.'@default'}] and context: ${eci.context}")
+            ((ContextStack) eci.context).pop()
+        }
         // set the default-value if applicable
         if (!parameterValue && !(parameterValue instanceof Boolean) && parameterNode."@default-value") {
             ((ContextStack) eci.context).push(rootParameters)
-            parameterValue = eci.getResource().evaluateStringExpand((String) parameterNode."@default-value", "${this.location}_${parameterName}_default")
+            parameterValue = eci.getResource().evaluateStringExpand((String) parameterNode."@default-value", "${this.location}_${parameterName}_default_value")
             // logger.warn("For parameter ${namePrefix}${parameterName} new value ${parameterValue} from default-value [${parameterNode.'@default-value'}] and context: ${eci.context}")
             ((ContextStack) eci.context).pop()
         }
