@@ -227,9 +227,16 @@ This Work includes contributions authored by David E. Jones, not as a
                     http://download.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html
                 </xs:documentation></xs:annotation>
             </xs:attribute>
+            <xs:attribute name="default" type="xs:string">
+                <xs:annotation><xs:documentation>The field or expression specified will be used for the parameter if
+                    no value is passed in (only used if required=false). Like default-value but is an field name or
+                    expression instead of a text value. If both this and default-value are specified this will be
+                    evaluated first and only if empty will default-value be used..</xs:documentation></xs:annotation>
+            </xs:attribute>
             <xs:attribute name="default-value" type="xs:string">
-                <xs:annotation><xs:documentation>The value specified will be used for the parameter if no value is
-                    passed in (only used if required=false).</xs:documentation></xs:annotation>
+                <xs:annotation><xs:documentation>The text value specified will be used for the parameter if no value is
+                    passed in (only used if required=false). If both this and default are specified default will be
+                    evaluated first and this will only be used if default evaluates to an empty value..</xs:documentation></xs:annotation>
             </xs:attribute>
             <xs:attribute name="entity-name" type="xs:string"/>
             <xs:attribute name="field-name" type="xs:string"/>
